Added doc for campus
